--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Tolga",
   "license": "ISC",
   "dependencies": {
+    "@alpinejs/intersect": "^3.14.9",
     "alpinejs": "^3.12.3",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
