--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@alpinejs/intersect": "^3.14.9",
+    "@tailwindcss/typography": "^0.5.16",
     "alpinejs": "^3.12.3",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
