--- a/hugo.toml
+++ b/hugo.toml
@@ -1,62 +1,12 @@
 baseURL = 'http://localhost:1314/'
 languageCode = 'en-AU'
-title = 'Algoteq Website'
+title = 'Algoteq – Advanced Algorithmic Trading Systems'
 
 [menu]
-
-  [[menu.main]]
-    name = "Home"
-    url = "/"
-    weight = 10
-
-  [[menu.main]]
-    name = "About"
-    url = "/aboutus/"
-    weight = 20
-
-  [[menu.main]]
-    name = 'Services'
-    url = '/services'
-    weight = 30
-
-  [[menu.main]]
-    name = 'Catering'
-    url = '/services/catering'
-    parent = 'Services'
-    weight = 31
-  
-  [[menu.main]]
-    name = 'Conferences'
-    url = '/services/conferences'
-    parent = 'Services'
-    weight = 32
-
-  [[menu.main]]
-    name = 'Hospitality'
-    url = '/services/hospitality'
-    parent = 'Services'
-    weight = 33
-
-  [[menu.main]]
-    name = 'Travel'
-    url = '/services/travel'
-    weight = 34
-    parent = 'Services'
-
-  [[menu.main]]
-    name = "Contact Us"
-    url = "/contactus/"
-    weight = 40
-
-  [[menu.main]]
-    name = "Blogs"
-    url = "/blog/"
-    weight = 50
-
   
 [params]
-  author = "Blog Author"
-  description = "This is an awesome Hugo Bootstrap site"
+  author = "Algoteq"
+  description = "Algoteq designs high-performance algorithmic trading platforms powered by AI, data analytics, and advanced simulation tools."
 
 [frontmatter]
   date = ["date", "publishDate", "lastmod"]
@@ -97,4 +47,5 @@ title = 'Algoteq Website'
   [[build.cachebusters]]
     source = "assets/.*\\.(.*)$"
     target = "$1"
+
 
